--- a/startrak-ui/qt/stylesheets/startrak-dark.qss
+++ b/startrak-ui/qt/stylesheets/startrak-dark.qss
@@ -107,7 +107,7 @@ InspectorView QLabel {
 
 QRangeSlider{
 	background: transparent;
-	height: 32px;
+	height: 30px;
 }
 QRangeSlider::groove{
 	height: 4px;
@@ -125,6 +125,14 @@ QRangeSlider::handle:hover{
 	background: @secondary;
 }
 
-QGraphicsView{
+ImageViewer QGraphicsView{
 	background: black;
+}
+ImageViewer QFrame#lvl_panel{
+	background: @primary-dark;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+ImageViewer QFrame#lvl_panel > *{
+	background: transparent;
 }
