--- a/startrak-ui/qt/layouts/image_viewer.ui
+++ b/startrak-ui/qt/layouts/image_viewer.ui
@@ -31,17 +31,14 @@
    </property>
    <item>
     <widget class="QGraphicsView" name="graphicsView">
-     <property name="backgroundBrush">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
+     <property name="interactive">
+      <bool>false</bool>
      </property>
      <property name="cacheMode">
       <set>QGraphicsView::CacheBackground</set>
+     </property>
+     <property name="viewportUpdateMode">
+      <enum>QGraphicsView::SmartViewportUpdate</enum>
      </property>
      <property name="optimizationFlags">
       <set>QGraphicsView::DontAdjustForAntialiasing|QGraphicsView::IndirectPainting</set>
@@ -49,7 +46,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="lvl_panel">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -81,6 +78,18 @@
       </item>
       <item>
        <widget class="QRangeSlider" name="level_slider">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <number>255</number>
+        </property>
+        <property name="singleStep">
+         <number>0</number>
+        </property>
+        <property name="value">
+         <number>255</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -96,6 +105,11 @@
         <item>
          <property name="text">
           <string>Logarithmic</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Negative Linear</string>
          </property>
         </item>
        </widget>
@@ -164,8 +178,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>comboBox</sender>
+   <signal>currentTextChanged(QString)</signal>
+   <receiver>ImageViewer</receiver>
+   <slot>on_colormapChange(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>784</x>
+     <y>616</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>903</x>
+     <y>535</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>on_levelChange(int,int)</slot>
+  <slot>on_colormapChange(QString)</slot>
  </slots>
 </ui>
