--- a/startrak-ui/qt/stylesheets/startrak-dark.qss
+++ b/startrak-ui/qt/stylesheets/startrak-dark.qss
@@ -7,6 +7,7 @@
 	secondary-light: #6fb7ff
 	secondary-dark: #163f68
 	highlighted: #f4d62b
+	highlighted-dark: #907b00
 	panel-5: rgba(255, 255, 255, 12)
 	panel-10: rgba(255, 255, 255, 25)
 	panel-20: rgba(255, 255, 255, 50)
