--- a/startrak-ui/qt/layouts/insp_star.ui
+++ b/startrak-ui/qt/layouts/insp_star.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
+    <width>269</width>
     <height>859</height>
    </rect>
   </property>
@@ -44,7 +44,7 @@
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>256</height>
+        <height>320</height>
        </size>
       </property>
       <property name="styleSheet">
@@ -74,15 +74,24 @@
         </widget>
        </item>
        <item>
-        <widget class="QFrame" name="frame_2">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(0, 0, 0);</string>
-         </property>
+        <widget class="QGraphicsView" name="graphicsView">
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
          </property>
          <property name="frameShadow">
           <enum>QFrame::Plain</enum>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QAbstractScrollArea::AdjustToContents</enum>
+         </property>
+         <property name="backgroundBrush">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
          </property>
         </widget>
        </item>
