--- a/startrak-ui/qt/layouts/insp_star.ui
+++ b/startrak-ui/qt/layouts/insp_star.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>269</width>
+    <width>287</width>
     <height>859</height>
    </rect>
   </property>
@@ -17,62 +17,59 @@
    <enum>QFrame::NoFrame</enum>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>4</number>
+   </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="bottomMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
+   <item>
+    <widget class="QLabel" name="label_16">
+     <property name="text">
+      <string>Preview</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
+     <property name="handleWidth">
+      <number>6</number>
+     </property>
      <widget class="QFrame" name="upper">
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>256</height>
+        <height>128</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>320</height>
+        <height>512</height>
        </size>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(28, 28, 28);</string>
       </property>
       <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
+       <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Plain</enum>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <widget class="QLabel" name="label_6">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">color: rgb(212, 212, 212);</string>
-         </property>
-         <property name="text">
-          <string>Preview</string>
-         </property>
-        </widget>
-       </item>
        <item>
         <widget class="QGraphicsView" name="graphicsView">
          <property name="frameShape">
@@ -93,6 +90,59 @@
            </color>
           </brush>
          </property>
+         <property name="cacheMode">
+          <set>QGraphicsView::CacheBackground</set>
+         </property>
+         <property name="optimizationFlags">
+          <set>QGraphicsView::DontAdjustForAntialiasing|QGraphicsView::IndirectPainting</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QFrame" name="exp_panel">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="label_15">
+            <property name="text">
+             <string>Auto exposure</string>
+            </property>
+            <property name="buddy">
+             <cstring>auto_exp</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="auto_exp">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
@@ -493,10 +543,10 @@
           </sizepolicy>
          </property>
          <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
+          <enum>QFrame::NoFrame</enum>
          </property>
          <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
+          <enum>QFrame::Plain</enum>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <property name="leftMargin">
@@ -549,8 +599,8 @@
    <slot>name_changed(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>95</x>
-     <y>198</y>
+     <x>157</x>
+     <y>301</y>
     </hint>
     <hint type="destinationlabel">
      <x>225</x>
@@ -565,8 +615,8 @@
    <slot>posx_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>76</x>
-     <y>223</y>
+     <x>135</x>
+     <y>391</y>
     </hint>
     <hint type="destinationlabel">
      <x>222</x>
@@ -581,8 +631,8 @@
    <slot>posy_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>163</x>
-     <y>222</y>
+     <x>236</x>
+     <y>391</y>
     </hint>
     <hint type="destinationlabel">
      <x>260</x>
@@ -597,12 +647,44 @@
    <slot>apert_changed(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>121</x>
-     <y>249</y>
+     <x>183</x>
+     <y>422</y>
     </hint>
     <hint type="destinationlabel">
      <x>228</x>
      <y>326</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>auto_exp</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>StarInspector</receiver>
+   <slot>set_autoexp(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>257</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>292</x>
+     <y>240</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>splitter</sender>
+   <signal>splitterMoved(int,int)</signal>
+   <receiver>StarInspector</receiver>
+   <slot>splitter_changed(int,int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>134</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-22</x>
+     <y>280</y>
     </hint>
    </hints>
   </connection>
@@ -612,5 +694,7 @@
   <slot>posx_changed(int)</slot>
   <slot>posy_changed(int)</slot>
   <slot>apert_changed(int)</slot>
+  <slot>set_autoexp(bool)</slot>
+  <slot>splitter_changed(int,int)</slot>
  </slots>
 </ui>
