--- a/startrak-ui/qt/layouts/main_layout.ui
+++ b/startrak-ui/qt/layouts/main_layout.ui
@@ -192,14 +192,17 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="content_right">
-            <property name="frameShape">
-             <enum>QFrame::StyledPanel</enum>
+           <widget class="QTextEdit" name="consoleText">
+            <property name="readOnly">
+             <bool>true</bool>
             </property>
-            <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
+            <property name="acceptRichText">
+             <bool>false</bool>
             </property>
            </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="consoleLine"/>
           </item>
          </layout>
         </widget>
